# ProjectChronos1

./: .gitignore  Final Project Proposal_ Project Chronos (Solo Project).txt  README-settings.md  README.md  chronos.db  phonebank gif.py  pyproject.toml  requirements.txt  sample_portfolio.json  seed_database.py
api/: __init__.py  axle.py  clear_graph.py  cobalt.py  deps.py  edgar.py  entity_list.py  explicit_clear.py  main.py  opencorp.py  relationships.py  reset.py  sosearch.py
chronos/: __init__.py  cli.py  db.py  lifecycle.py  models.py  portfolio.py  portfolio_db.py  relationships.py  settings.py  viz.py
chronos-dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
chronos-dashboard/public/: example_relationships.json
chronos-dashboard/src/: App.css  App.tsx  index.css  theme.css
chronos-dashboard/src/components/: AddRelationshipButton.tsx  AddRelationshipForm.tsx  ClearRelationshipsButton.tsx  DebugEntityDetails.tsx  EdgarRelationshipsButton.tsx  EntityTable.module.css  Layout.module.css  Layout.tsx  RelationshipForm.tsx  RelationshipGraph.tsx  SearchForm.module.css  SearchForm.tsx  ShellDetection.tsx  StatusChart.module.css  StatusChart.tsx
chronos-dashboard/src/hooks/: useApi.ts
chronos-dashboard/src/pages/: Dashboard.module.css  (+5 more)
chronos/scrapers/: __init__.py  axle.py  base.py  cobalt.py  de.py  edgar.py  openc.py  opencorp.py
static-assets/: demo_de.html
tests/: test_api_sosearch.py  test_lifecycle.py  test_models.py  test_portfolio.py  test_portfolio_db.py  test_scraper_de.py  test_scraper_edgar.py  test_scraper_openc.py
