[project]
name = "chronos"
version = "0.1.0"
description = "Corporate entity life-cycle toolkit"
requires-python = ">=3.9"

dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chronos", "api"]
package-dir = {"" = "."}
